# ovm

./: .asm-lsp.toml  .gitignore  CLAUDE.md  Cargo.toml  README.md  dev.nix
.idx/: dev.nix
src/: error.rs  lib.rs  main.rs
src/backend/: mod.rs
src/cli/: mod.rs
src/frontend/: expr.rs  mod.rs  parser.rs  stmt.rs  token.rs  tokenizer.rs
src/optimizer/: mod.rs
src/verification/: mod.rs
tests/: test_programs.rs  test_x86.rs
tests/programs/: else.ovm  fib.ovm  for.ovm  function.ovm  functions.ovm  if.ovm  many_vars.ovm  nested_loop.ovm  nested_scopes.ovm  scope.ovm  while._ovm
tests/snapshots/: test_programs__reference_files.snap.new  test_programs__reference_files@else.ovm.snap  test_programs__reference_files@else.ovm.snap.new  test_programs__reference_files@for.ovm.snap  test_programs__reference_files@for.ovm.snap.new  test_programs__reference_files@function.ovm.snap  test_programs__reference_files@function.ovm.snap.new  test_programs__reference_files@functions.ovm.snap  test_programs__reference_files@functions.ovm.snap.new  test_programs__reference_files@if.ovm.snap  test_programs__reference_files@if.ovm.snap.new  test_programs__reference_files@many_vars.ovm.snap  test_programs__reference_files@many_vars.ovm.snap.new  test_programs__reference_files@nested_loop.ovm.snap  test_programs__reference_files@nested_loop.ovm.snap.new  test_programs__reference_files@nested_scopes.ovm.snap  test_programs__reference_files@nested_scopes.ovm.snap.new  test_programs__reference_files@scope.ovm.snap  test_programs__reference_files@scope.ovm.snap.new  (+2 more)
tests/x86_64/: test.rs
(+17 files in other folders)
